--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300;400;600;700&family=Pacifico&family=Source+Sans+Pro:wght@200;400;600&family=Volkhov:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300;400;600;700&family=Pacifico&family=Source+Sans+Pro:wght@200;400;600&family=Volkhov:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 
 html,
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   position: relative; //backtotop
 }
 
