--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ a {
 }
 
 .header .header-menu ul li a::after {
-  content: '';
+  content: "";
   bottom: 0;
   left: 0;
   background-color: #e1b067;
@@ -130,6 +130,7 @@ a {
 
 .sticky {
   background-color: #fff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 @media (max-width: 992px) {
@@ -162,6 +163,10 @@ a {
   width: 100%;
   min-height: 450px;
   transition: all 300ms ease-in-out;
+}
+
+.productFeature .productFeature-item:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .productFeature .productFeature-item .productFeature-item-top {
@@ -686,7 +691,12 @@ a {
   width: 334px;
   padding-left: 57px;
   padding-top: 109px;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
+}
+
+.product-detail .container .product-detail__layout .product-detail__img .bg-product img {
+  width: 220px;
+  height: 156px;
 }
 
 .product-detail .container .product-detail__layout .product-detail__content {
@@ -695,7 +705,7 @@ a {
 }
 
 .product-detail .container .product-detail__layout .product-detail__content .product__name {
-  width: 196px;
+  width: 100%;
   height: 36px;
   font-style: normal;
   font-weight: 300;
@@ -712,7 +722,7 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
-  color: #140101;
+  color: #000000;
 }
 
 .product-detail .container .product-detail__layout .product-detail__content .available-size {
@@ -722,7 +732,7 @@ a {
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
-  color: #1ED90E;
+  color: #1ed90e;
 }
 
 .product-detail .container .product-detail__layout .product-detail__content .product__size-selection {
@@ -733,16 +743,19 @@ a {
 .product-detail .container .product-detail__layout .product-detail__content .product__size-selection li {
   list-style: none;
   margin-right: 21px;
-  padding-top: 11px;
-  padding-left: 10px;
-  background: #CCCCCC;
+  background: #cccccc;
   width: 50px;
   height: 50px;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
   line-height: 29px;
-  color: #1E1D1D;
+  color: #1e1d1d;
+}
+
+.product-detail .container .product-detail__layout .product-detail__content .product__size-selection li button {
+  height: 100%;
+  width: 100%;
 }
 
 .product-detail .container .product-detail__layout .product-detail__content .product__price {
@@ -750,7 +763,7 @@ a {
   font-weight: 600;
   font-size: 30px;
   line-height: 36px;
-  color: #FC0303;
+  color: #fc0303;
   height: 47px;
 }
 
@@ -768,17 +781,17 @@ a {
   font-size: 30px;
   line-height: 36px;
   color: #FFFCFC;
-  margin-right: 20px;
 }
 
 .product-detail .container .product-detail__layout .product-detail__content .product-amount .product-amount__selected {
-  margin-right: 25px;
-  width: 14px;
+  width: 59px;
   height: 36px;
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
+  display: inline-block;
+  text-align: center;
   color: #000000;
 }
 
@@ -791,7 +804,7 @@ a {
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
-  color: #FFFCFC;
+  color: #fffcfc;
 }
 
 .product-detail .container .product-detail__layout .product-detail__content .btnProductAdd {
@@ -805,4 +818,9 @@ a {
   font-size: 24px;
   line-height: 29px;
   color: #FFF8F8;
+  transition: all 0.3s;
+}
+
+.product-detail .container .product-detail__layout .product-detail__content .btnProductAdd:hover {
+  background: linear-gradient(270deg, rgba(18, 5, 104, 0.9) 5.14%, #500b5b 89.71%);
 }
