--- a/scss/layout/_product-feature.scss
+++ b/scss/layout/_product-feature.scss
@@ -8,7 +8,6 @@
     }
   
     .productFeature-item {
-      // display: block;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -17,7 +16,7 @@
       min-height: 450px;
       transition: all 300ms ease-in-out;
       &:hover {
-        // box-shadow: 0 30px 30px -10px rgb(0 0 0 / 20%);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       }
   
       .productFeature-item-top {
